Update Harshitha Uppar - College Ambassador Resume.html

--- a/Harshitha Uppar - College Ambassador Resume.html
+++ b/Harshitha Uppar - College Ambassador Resume.html
@@ -73,15 +73,14 @@
     <h3>Leadership in Group Projects</h3>
     <p>Led multiple team projects ensuring clear roles, deadlines, and collaboration. Motivated peers to achieve goals while fostering a positive and productive environment.</p>
 
-    <h3>Tech Events &amp; Hackathons Participation</h3>
-    <p>Participated in coding hackathons and tech workshops to enhance technical skills. Gained experience working in teams and applying coding knowledge in real scenarios.</p>
+    <h3>Tech Events &amp; ideathon Participation</h3>
+    <p>Participated in ideathon and tech workshops to enhance technical skills. Gained experience working in teams and applying coding knowledge in real scenarios.</p>
   </section>
 
   <section>
     <h2>Education</h2>
-    <p>[Your College Name]</p>
-    <p>[Degree], [Year]</p>
-    <p>[Relevant coursework or projects]</p>
+    <p>cambridge institue of technology</p>
+    <p>CSE data science, 2028</p>
   </section>
 
   <section>
