--- a/index.html
+++ b/index.html
@@ -1,104 +1,47 @@
 <!DOCTYPE html>
-<!-- saved from url=(0069)file:///C:/Users/Harshitha/OneDrive/Desktop/py%20projects/resume.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Harshitha Uppar - College Ambassador Resume</title>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Harshitha Uppar | Resume</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 1rem 2rem;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-    h1, h2 {
-      color: #2a7ae2;
-    }
-    hr {
-      border: none;
-      border-top: 1px solid #ccc;
-      margin: 1rem 0;
-    }
-    section {
-      margin-bottom: 1.5rem;
-    }
-    ul {
-      list-style-type: disc;
-      margin-left: 20px;
-    }
-    a {
-      color: #2a7ae2;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
+    body { font-family: Arial, sans-serif; margin: 40px; background: #f7f7f7; }
+    h1 { color: #2c3e50; }
+    section { margin-bottom: 30px; }
+    .card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
   </style>
 </head>
 <body>
-  <h1>Harshitha Uppar</h1>
-  <p>Email: <a href="mailto:harshithauppar203@gmail.com">harshithauppar203@gmail.com</a></p>
-  <p>LinkedIn: <a href="file:///C:/Users/Harshitha/OneDrive/Desktop/py%20projects/resume.html" "https:="" www.linkedin.com="" in="" u-harshitha-2616b7324"="" target="_blank">[Your LinkedIn]</a></p>
-  <p>GitHub: <a href="https://github.com/u-harshitha007" target="_blank">[Your GitHub]</a></p>
-  <p>Location: [ bengaluru,india]</p>
-  
-  <hr>
+  <div class="card">
+    <h1>Harshitha Uppar</h1>
+    <p><strong>Email:</strong> harshithauppar203@gmail.com</p>
+    <p><strong>LinkedIn:</strong> linkedin.com/in/harshithauppar</p>
 
-  <section>
-    <h2>Objective</h2>
-    <p>
-      Enthusiastic and confident communicator with strong leadership skills and a passion for technology and public speaking. Seeking the role of College Ambassador for GSSoC/GirlScript to promote open-source learning and inspire my peers, especially beginners and girls in tech.
-    </p>
-  </section>
+    <section>
+      <h2>About Me</h2>
+      <p>Content creator, public speaker, and aspiring data scientist aiming to be the face of data for Gen Z.</p>
+    </section>
 
-  <section>
-    <h2>Skills</h2>
-    <ul>
-      <li>Public Speaking &amp; Crowd Engagement</li>
-      <li>Leadership &amp; Team Coordination</li>
-      <li>Content Creation &amp; Social Media Promotion</li>
-      <li>Basic Coding &amp; GitHub Knowledge</li>
-      <li>Workshop Planning &amp; Execution</li>
-      <li>Peer Mentoring &amp; Motivation</li>
-    </ul>
-  </section>
+    <section>
+      <h2>Skills</h2>
+      <ul>
+        <li>Data Science, Python, Git</li>
+        <li>Public Speaking, Crowd Work</li>
+        <li>Content Creation, Reels, AI Voiceovers</li>
+      </ul>
+    </section>
 
-  <section>
-    <h2>Experience</h2>
-    <h3>Public Speaking &amp; Crowd Work</h3>
-    <p>Delivered presentations and hosted events engaging diverse audiences. Developed strong communication skills and the ability to connect with people effectively.</p>
-
-    <h3>Leadership in Group Projects</h3>
-    <p>Led multiple team projects ensuring clear roles, deadlines, and collaboration. Motivated peers to achieve goals while fostering a positive and productive environment.</p>
-
-    <h3>Tech Events &amp; ideathon Participation</h3>
-    <p>Participated in ideathon and tech workshops to enhance technical skills. Gained experience working in teams and applying coding knowledge in real scenarios.</p>
-  </section>
-
-  <section>
-    <h2>Education</h2>
-    <p>cambridge institue of technology</p>
-    <p>CSE data science, 2028</p>
-  </section>
-
-  <section>
-    <h2>Promotional Plan Summary</h2>
-    <ul>
-      <li>Host engaging intro sessions about GSSoC in classrooms and clubs</li>
-      <li>Use social media (Instagram, WhatsApp) to share creative content and updates</li>
-      <li>Design posters with QR codes for campus visibility</li>
-      <li>Provide personal guidance for registration and GitHub basics</li>
-      <li>Conduct beginner-friendly Git &amp; GitHub workshops</li>
-      <li>Share success stories to motivate participation</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>References</h2>
-    <p>Available upon request</p>
-  </section>
-
-
-</body></html>
+    <section>
+      <h2>Projects</h2>
+      <ul>
+        <li><strong>Gen Z Skill Tracker:</strong> A Notion tool to help learners save content from Reels & YouTube.</li>
+        <li><strong>Viral Reel Tracker:</strong> Tool to break down viral Instagram reels and grow creator pages.</li>
+        <li><strong>ShadowStrike Drone:</strong> AI-powered military drone using eco-friendly materials.</li>
+      </ul>
+    </section>
+  </div>
+</body>
+</html>
+ 
+ 
+ 
